# Slaw_v3

./: .gitignore  .replit  replit.md  start.sh
backend/: .env.example  .gitignore  README.md  debug_fedlex.py  debug_fedlex_sparql.py  debug_qdrant.py  debug_qdrant2.py  debug_qdrant_cantonal.py  debug_qdrant_cantonal2.py  debug_retrieval.py  debug_scan.py  debug_scan_bern.py  debug_scan_bern2.py  debug_scan_bern3.py  out.txt  patch_config.py  patch_integration_test.py  patch_integration_test2.py  patch_main.py  patch_mock.py  patch_scheduler.py  patch_seeds.py  patch_verify.py  patch_verify2.py  phase3_tmp.md  prune_831_40.py  pyproject.toml  ruff.toml  temp.json  test_sort.py  test_sort2.py  test_sparql.py
backend/data/: sweep.db  sweep.db-shm  sweep.db-wal
backend/diagnostics/: pip_audit.json  profile_audit.json  run_audit.py
backend/doc/: managed-agents-setup.md
backend/docs/: managed-agents.md
backend/fixtures/: b_permit_eu_employee.json  bern_tenant_profile.json  c_permit_third_country.json  luis_profile.json
backend/prompt/: Slaw_V3.md  pip_system_prompt.py  postcss.config.mjs
backend/scripts/: check_agent_backed.py  export_openapi.py  managed_agents_smoke.py  smoke.sh  validate_catalog.py
backend/seed/: entitlements.json  law_articles.cantonal.json  law_articles.json
backend/tests/: conftest.py  test_admin_audits.py  test_agent_provenance.py  test_agent_runner.py  test_api.py  test_cantonal_ingest.py  test_curriculum_ingest.py  test_fedlex_ingest.py  test_fedlex_live.py  test_invariants.py  test_managed_agents_health.py  test_mcp_servers_serve.py  (+14 more)
(+145 files in other folders)
