[project]
name = "swiss-legal-api"
version = "0.1.0"
description = "Proactive Rights Discovery API for Swiss residents"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "anthropic>=0.39.0",
  "qdrant-client>=1.12.0",
  "sentence-transformers>=3.2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.1",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
strict = true
python_version = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_legal_api"]
